[package]
name = "isekaimaid-cache-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
serde_cbor = "0.11.2"
serde="1.0"
serde_derive = "1.0"
ciborium="0.2"
dashmap = { version = "5.2", features=["serde"] }
futures-util="0.3"
serde_with_macros = "1.5"
